# courtdominion

./: .env  .env.template  CHANGELOG.md  CODEBASE_TLDR.md  DEBUGGING_GUIDE.md  DOCKER_CHEATSHEET.md  GITHUB_ACTIONS_README.md  JOBS_TLDR.md  Makefile  README.md  TESTING.md  TODO.md  agent.md  checkScript.sh  cleanup_filesystem.sh  docker-compose.yml  verify_fixes.sh  wrapper.sh
dbb2-engine/: .gitignore  API_DOCUMENTATION.md  Dockerfile  MIGRATION_FEATURE_STATUS.md  bridge_to_cd.py  pyproject.toml  requirements.txt  run_engine.py
dbb2-engine/data_collection/: __init__.py  build_cache.py  collect_nba_season.py  dbb2_projections.py  fetch_real_injuries.py  fetch_real_players.py  generate_age_profiles.py  generate_ceiling_profiles.py  generate_city_effects.py  generate_death_spot_effects.py  generate_durability_profiles.py  generate_matchup_adjustments.py  generate_position_scarcity.py  generate_schedule_effects.py  generate_sgp_weights.py  generate_usage_profiles.py  generate_zscore_baselines.py  retry_failed_players.py  run_all_seasons.sh  update_current_season.py  utils.py
dbb2-engine/engine/: __init__.py  api.py  baseline.py  export.py  export_betting.py  game_day.py  live_data.py  lookup.py  position_map.py  pricing.py  projections.py  season.py  validate.py
dbb2-engine/output/: betting_contract.json  insights.json  players.json  projections.json  risk.json
dbb2-engine/static_data/: __init__.py
dbb2-engine/tests/: conftest.py  test_age_profiles.py  test_ceiling_profiles.py  test_city_effects.py  test_data_validation.py  test_death_spot_effects.py  (+19 more)
(+593 files in other folders)
