[project]
name = "dbb2-engine"
version = "0.1.0"
description = "DBB2 Basketball Projection Engine — 30-year statistical profiles for fantasy basketball"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
collection = [
    "nba_api>=1.4.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
